testdata/baselines/reference/submodule/conformance/moduleExportDuplicateAlias2.errors.txt
test.js(1,27): error TS7016: Could not find a declaration file for module './moduleExportAliasDuplicateAlias'. 'moduleExportAliasDuplicateAlias.js' implicitly has an 'any' type.


==== test.js (1 errors) ====
    const { apply } = require('./moduleExportAliasDuplicateAlias')
                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module './moduleExportAliasDuplicateAlias'. 'moduleExportAliasDuplicateAlias.js' implicitly has an 'any' type.
    apply()
    
==== moduleExportAliasDuplicateAlias.js (0 errors) ====
    module.exports.apply = undefined;
    function a() { }
    module.exports.apply = a;
    module.exports.apply = a;
    module.exports.apply()
    